# Instagram

./: .gitignore  README.md  pyproject.toml
src/: base_api.py  my_validator.py
src/instagram/: settings.py  urls.py
src/post/: base_api.py  func.py  models.py  permissions.py  serializers.py  tests.py  views.py
src/post/migrations/: 0001_initial.py  0002_auto_20210115_0648.py  0003_auto_20210201_0508.py  0004_post_image.py  0005_auto_20210222_1049.py  0006_auto_20210223_0606.py  0007_auto_20210302_0706.py
src/templates/: base.html
src/templates/post/: base.html  post_list.html
src/templates/user/: sign_up.html  templates.html
src/user/: models.py  permissions.py  serializers.py  views.py
src/user/migrations/: 0001_initial.py  0002_auto_20210210_0653.py  0003_user_image.py  0004_auto_20210223_0606.py
