[tool.poetry]
name = "instagram"
version = "0.1.0"
description = ""
authors = ["hay <kds0280@naver.com>"]

[tool.poetry.dependencies]
python = "^3.6"

Django = "^3.1"
djangorestframework = "3.12.2"
Pillow = "8.1.0"
Cerberus = "1.3.2"

[tool.poetry.dev-dependencies]
ipython = "7.16.1"
django-extensions = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
